# R3think_AlsoEnergy_Migration_App

./: .gitignore  NEXT_STEPS.md  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
backend/: .env  .env.example  alsoenergy_backend.spec  pyproject.toml  run_backend.py  smoke_test.py
backend/app/: alsoenergy.py  config.py  credentials.py  csv_export.py  db.py  main.py  models.py  sync.py  timezones.py
backend/exports/: Smoke_Test_2026-06-24.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: CopyButton.jsx  DataField.jsx  JsonViewer.jsx  SiteSyncPicker.jsx  StatusBadge.jsx  SyncProgressDrawer.jsx
frontend/src/lib/: api.js  shell.js
frontend/src/pages/: Dashboard.jsx  DeviceDetail.jsx  Discovery.jsx  GatewayDetail.jsx  MigrationJobDetail.jsx  MigrationsList.jsx  NewMigrationJob.jsx  Onboarding.jsx  Settings.jsx  SiteDetail.jsx  SitesList.jsx
