[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alsoenergy-migration"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.19",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "sse-starlette>=2.1",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
include = ["app*"]
